test/should_fail/list_op_3.erl
-module(list_op_3).

-spec fail([a, ...], [a]) -> [a, ...].
fail(Xs, Ys) -> Xs -- Ys.

